--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
-language: bash
+language: lua
 
 services:
   - docker
-  
+
 before_install:
-  - docker build -t lua-resty-jwt .
+  - docker pull skylothar/openresty-testsuite:latest
 
 script:
-  - docker run --rm -it -v `pwd`:/lua-resty-jwt lua-resty-jwt make test
+  - docker-compose up
 
 branches:
   only:
