--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,12 @@ language: bash
 
 services:
   - docker
-  
+
 before_install:
-  - docker build -t lua-resty-jwt .
+  - docker pull skylothar/openresty-testsuite:latest
 
 script:
-  - docker run --rm -it -v `pwd`:/lua-resty-jwt lua-resty-jwt make test
+  - docker-compose up
 
 branches:
   only:
