Ensure tests failure are reported by CI
... by ensuring that `luarocks ... && prove ...` exit code is
propagated to CI.  Remove `docker-compose` in order to reduce levels
of indirections.

Also:

* Test local codebase rather than hardcoded remote master branch - in
  order to enable more flexible testing e.g. local develoment testing
  or GiHub PR testing or GitHub branch testing;

* Split CI logic in separate script in order to enable local
  development testing.

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,10 @@ services:
   - docker
 
 before_install:
-  - docker pull skylothar/openresty-testsuite:latest
+  - ./ci before_install
 
 script:
-  - docker-compose up
+  - ./ci script
 
 branches:
   only:
