--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,7 @@ services:
   - docker
 
 before_install:
-  - docker pull skylothar/openresty-testsuite:latest
+  - ./ci before_install
 
 script:
-  - docker-compose up
-
-branches:
-  only:
-    - master
+  - ./ci script
